# CServer

./: CMakeLists.txt
cmake/: Findsqlite3.cmake
src/: certgen.cpp  database.cpp  database.hpp
